--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             margin: 0;
         }
         </style>
-        <title></title>
+        <title></title> Forces Armées Maliennes (FAMA): Décès selon le type d'événement (2012 à août 2020)
     </head>
     <body>
         <div id="map">
