--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <title></title> Forces Armées Maliennes (FAMA): Décès selon le type d'événement (2012 à août 2020)
     </head>
     <body>
-        <div id="map"> Source: acleddata.com
+        <div id="map">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
