--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         var bounds_group = new L.featureGroup([]);
         var basemap0 = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors,<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>',
-            maxZoom: 28
+            maxZoom: 28 Données: Acleddata.com Cartographie: M. Kouma
         });
         basemap0.addTo(map);
         function setBounds() {
